--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "engines":{"node":"8.1.0"},
   "name": "coordination",
   "version": "1.0.0",
   "description": "coordination using Redux, React,rxjs,socket.io, and Typescript ",
@@ -18,19 +19,25 @@
     "concurrently": "3.4.0",
     "express": "4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
+    "jquery": "3.2.1",
     "koa": "2.3.0",
     "koa-router": "7.2.1",
     "koa-session-minimal": "3.0.4",
     "koa-static": "4.0.1",
     "lodash": "4.17.4",
     "react": "15.4.2",
+    "react-contenteditable": "2.0.4",
     "react-dom": "15.4.2",
     "react-redux": "5.0.3",
+    "redis": "2.7.1",
+    "redis-commands": "1.3.1",
     "redux": "3.6.0",
     "redux-actions": "2.0.1",
     "redux-observable": "0.14.1",
     "rxjs": "5.4.2",
     "serve-static": "1.12.1",
+    "socket.io-client": "2.0.3",
+    "then-redis": "2.0.1",
     "todomvc-app-css": "2.0.6",
     "yargs": "7.0.1"
   },
@@ -49,6 +56,7 @@
     "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.4.0",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-latest": "6.24.0",
