--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "engines":{"node":"8.1.4"},
+  "engines": {
+    "node": "8.1.4"
+  },
   "name": "coordination",
   "version": "1.0.0",
   "description": "coordination using Redux, React,rxjs,socket.io, and Typescript ",
@@ -21,6 +23,7 @@
     "extract-text-webpack-plugin": "2.1.0",
     "jquery": "3.2.1",
     "koa": "2.3.0",
+    "koa-cors": "0.0.16",
     "koa-router": "7.2.1",
     "koa-session-minimal": "3.0.4",
     "koa-static": "4.0.1",
